--- a/style.css
+++ b/style.css
@@ -975,6 +975,15 @@ background: #F11A7B;
     color: #757575;
     margin-right: 1rem;
 }
+.login-component-top,
+.hurry-up-component-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 .login-register-form input{
     border-radius: 3px;
 background: #F9F9F9;
